--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="wrap">
     <section>
       <article>
-        <video src="/img/luigi's_mansion1.mp4" muted autoplay playsinline loop></video>
+        <video src="../img/luigi's_mansion1.mp4" muted autoplay playsinline loop></video>
         <p data-aos="zoom-in-up" data-aos-duration="1500">
           Luigi's Mansion2 <br>
           2024년 6월 27일(목) 발매 <br>
@@ -47,14 +47,14 @@
 
     <section>
       <article>
-        <video src="/img/story.mp4" muted autoplay playsinline loop></video>
+        <video src="../img/story.mp4" muted autoplay playsinline loop></video>
         <p data-aos="zoom-in-up" data-aos-duration="1500">위험에 처한 유령연구자 '아라따박사'를 구하기 위한<br>겁많은 루이지의 으스스한 모험기!</p>
       </article>
     </section>
 
     <section>
       <article>
-        <video src="/img/darklight.mp4" muted autoplay playsinline loop></video>
+        <video src="../img/darklight.mp4" muted autoplay playsinline loop></video>
         <p data-aos="zoom-in-up" data-aos-duration="1500">눈에 보이는 것이 전부... 라고 할 수 없습니다. <br>
           맨션을 탐색하여 보이지 않는 것들을 찾아보아요
         </p>
@@ -63,7 +63,7 @@
 
     <section>
       <article>
-        <video src="/img/multi01.mp4" muted autoplay playsinline loop></video>
+        <video src="../img/multi01.mp4" muted autoplay playsinline loop></video>
         <p data-aos="zoom-in-up" data-aos-duration="1500">최대 4명까지 다 함께 협력! <br>
           전 세계의 누구와도, 가까이 있는 사람과도 협력하여 클리어하는 미션
         </p>
