--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Luigi's Mansion</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="/img/favicon_io/favicon.ico">
+  <link rel="icon" href="../img/favicon_io/favicon.ico">
   <script src="https://kit.fontawesome.com/b806d5492f.js" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
